# OpenStruc

./: CMakeLists.txt  README.md
ObjectScan/src/: CMakeLists.txt  ObjectScan.cpp  backsp.cpp  endstr.cpp  floatn.cpp  header.cpp  in_from_stdin.cpp  integr.cpp  isstring.cpp  label.cpp  matchs.cpp  matchs_exact.cpp  name.cpp  numd.cpp  numf.cpp  numi.cpp  out_to_stdout.cpp  readLine.cpp  scanDebug.cpp  scan_contents.cpp  sep.cpp  setInputFile.cpp  setOutputFile.cpp  sizlst.cpp  toLowerStr.cpp  trlist.cpp  trxlst.cpp  updateInputFile.cpp
ObjectScan/src/include/: ObjectScan.h
Solutions/: grid.out  planeFrame.out  planeTruss.out  spaceFrame.out  spaceTruss.out
src/: CMakeLists.txt
src/element/: CMakeLists.txt  element.cpp
src/element/gridElement/: CMakeLists.txt  applyConcentratedLoads.cpp  applyConcentratedMoment.cpp  applyLinVarLoads.cpp  applyTempGradients.cpp  applyUniformLoads.cpp  applyUniformTorsion.cpp  finishApplingPrimaryForces.cpp  getGlobalStiffnessMatrix.cpp  gridElement.cpp  mult4.cpp  mult6.cpp  printElementPrimaryForces.cpp
src/element/gridElement/include/: gridElement.h
src/element/include/: element.h
src/element/threeDFrameElement/: CMakeLists.txt  applyConcentratedLoads.cpp  applyConcentratedMoment.cpp  applyLinVarLoads.cpp  applyTempGradients.cpp  applyUniformLoads.cpp  applyUniformTorsion.cpp  defineSectionProperties.cpp  finishApplingPrimaryForces.cpp  getGlobalStiffnessMatrix.cpp  getLocalStiffnessMatrix.cpp  mult4.cpp  mult6.cpp  printElementPrimaryForces.cpp  setElementLengthAndRotation.cpp  setElementStiffnessFactors.cpp  setSectionProperties.cpp  threeDFrameElement.cpp
src/element/threeDFrameElement/include/: threeDFrameElement.h
src/element/threeDTrussElement/: CMakeLists.txt  applyConcentratedLoads.cpp  applyConcentratedMoment.cpp  applyLinVarLoads.cpp  applyTempGradients.cpp  applyUniformLoads.cpp  finishApplingPrimaryForces.cpp  getGlobalStiffnessMatrix.cpp  mult4.cpp  mult6.cpp  printElementPrimaryForces.cpp  threeDTrussElement.cpp
src/element/threeDTrussElement/include/: threeDTrussElement.h
src/element/twoDFrameElement/: CMakeLists.txt  applyConcentratedLoads.cpp  applyConcentratedMoment.cpp  applyLinVarLoads.cpp  applyTempGradients.cpp  applyUniformLoads.cpp  finishApplingPrimaryForces.cpp  getGlobalStiffnessMatrix.cpp  mult4.cpp  mult6.cpp  printElementPrimaryForces.cpp  twoDFrameElement.cpp
src/element/twoDFrameElement/include/: twoDFrameElement.h
src/element/twoDTrussElement/: CMakeLists.txt  applyConcentratedLoads.cpp  applyConcentratedMoment.cpp  applyLinVarLoads.cpp  applyTempGradients.cpp  applyUniformLoads.cpp  finishApplingPrimaryForces.cpp  getGlobalStiffnessMatrix.cpp  mult4.cpp  mult6.cpp  printElementPrimaryForces.cpp  twoDTrussElement.cpp
src/element/twoDTrussElement/include/: twoDTrussElement.h
src/include/: ConjugateGradient.h  dimen.h  gaussElimination.h  lenguage.h  matplotlibcpp.h  typedef.h
src/joint/: CMakeLists.txt  joint.cpp
src/joint/gridJoint/: CMakeLists.txt  gridJoint.cpp
src/joint/gridJoint/include/: gridJoint.h
src/joint/include/: joint.h
src/joint/threeDFrameJoint/: CMakeLists.txt  threeDFrameJoint.cpp
src/joint/threeDFrameJoint/include/: threeDFrameJoint.h
src/joint/threeDTrussJoint/: CMakeLists.txt  threeDTrussJoint.cpp
src/joint/threeDTrussJoint/include/: threeDTrussJoint.h
src/joint/twoDFrameJoint/: CMakeLists.txt  twoDFrameJoint.cpp
src/joint/twoDFrameJoint/include/: twoDFrameJoint.h
src/joint/twoDTrussJoint/: CMakeLists.txt  twoDTrussJoint.cpp
src/joint/twoDTrussJoint/include/: twoDTrussJoint.h
src/main/: CMakeLists.txt  main.cpp
src/openStruc/: CMakeLists.txt  assembleGlobalStifnessMatrix.cpp  combineLoadCases.cpp  defineElements.cpp  driver.cpp  finishLoadVector.cpp  formLeftColumn.cpp  getNodalLoads.cpp  getPrimaryForcesDueToDisplaecments.cpp  getPrimaryForcesDueToGlobalTemp.cpp  getPrimaryForcesDueToLoads.cpp  getTitle.cpp  header.cpp  openStruc.cpp  plotStruc.cpp  printElementsSolution.cpp  printJointDisplacements.cpp  printJointsSolution.cpp  printStrucData.cpp  readCoordinatesAndConstraints.cpp  readIncidences.cpp  readLoadCases.cpp  readMaterials.cpp  readSectionTypes.cpp  setBasicData.cpp  setElementsForcesBinaryFile.cpp  setErrorMassages.cpp  setStructureType.cpp  setWorkingFileName.cpp  solveDisplacements.cpp  welcomeBanner.cpp
src/openStruc/include/: openStruc.h
